--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,24 @@
 <mat-sidenav-container>
   <!--side nav-->
   <mat-sidenav mode="side" opened>
-     <!--item 1-->
-     <a routerLink="/home">
+    <!--item 1-->
+    <a routerLink="/home">
       <span class="material-icons"> home </span>
       <span>Home</span>
     </a>
     <!--item 2-->
-    <a routerLink="/lazy1">
+    <a routerLink="/1">
       <span class="material-icons"> lightbulb </span>
       <span>Lazy Component 1</span>
     </a>
     <!--item 3-->
-    <a routerLink="/lazy2">
+    <a routerLink="/2">
       <span class="material-icons"> language </span>
       <span>Lazy Component 2</span>
     </a>
   </mat-sidenav>
   <!--content-->
-  <mat-sidenav-content>    
+  <mat-sidenav-content>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
